build: fix