@@ -71,7 +71,7 @@ public enum MascotsSkinUnlockRewards implements CityRewards {
                 .toList();
         String skins;
         if (names.size() == 1) {
-            skins = "la Mascotte " + names.get(0);
+            skins = "la Mascotte " + names.getFirst();
         } else {
             skins = "les Mascottes " + String.join(", ", names.subList(0, names.size() - 1))
                     + " et " + names.get(names.size() - 1);
